{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 23,
  "lineage": "09b42da9-eeb9-b37a-8db5-e06a356065f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "NewYork-TGW01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:866340886126:transit-gateway/tgw-085a2b62a6e032cc2",
            "association_default_route_table_id": "tgw-rtb-0ecbd03866d59819b",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "NewYork-TGW01",
            "dns_support": "enable",
            "id": "tgw-085a2b62a6e032cc2",
            "owner_id": "866340886126",
            "propagation_default_route_table_id": "tgw-rtb-0ecbd03866d59819b",
            "tags": {
              "Location": "Sao Paulo",
              "Name": "NewYork-TGW01",
              "Owner": "TIQS",
              "Service": "TGW"
            },
            "tags_all": {
              "Location": "Sao Paulo",
              "Name": "NewYork-TGW01",
              "Owner": "TIQS",
              "Service": "TGW"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-A-NewYork-Prod-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-097b8cfc2a1fed906",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0cb1dbda54fc9d153"
            ],
            "tags": {
              "Name": "VPC-A-NewYork-Prod-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-A-NewYork-Prod-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-085a2b62a6e032cc2",
            "vpc_id": "vpc-044e41a5c11bfd984",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_subnet.vpc-A-public-us-east-1a",
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-B-NewYork-Dev-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-079f845ff858ee43a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05304e11cd926a660"
            ],
            "tags": {
              "Name": "VPC-B-NewYork-Dev-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-B-NewYork-Dev-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-085a2b62a6e032cc2",
            "vpc_id": "vpc-03451c805d7c746b9",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_subnet.vpc-B-private-us-east-1b",
            "aws_vpc.VPC-B-NewYork-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "VPC-C-NewYork-Test-TGW-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06a50f43bcb2315f1",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05bc9644c563621ef"
            ],
            "tags": {
              "Name": "VPC-C-NewYork-Test-TGW-Attachment"
            },
            "tags_all": {
              "Name": "VPC-C-NewYork-Test-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-085a2b62a6e032cc2",
            "vpc_id": "vpc-00cf22b65773db7d5",
            "vpc_owner_id": "866340886126"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_subnet.vpc-C-private-us-east-1c",
            "aws_vpc.VPC-C-NewYork-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NewYork-ElasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08833dbe54fc890ec",
            "domain": "vpc",
            "id": "eipalloc-08833dbe54fc890ec",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-209-254-240.compute-1.amazonaws.com",
            "public_ip": "44.209.254.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NewYork-ElasticIP"
            },
            "tags_all": {
              "Name": "NewYork-ElasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC-A-NewYork-Prod-Windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:866340886126:instance/i-04a073de6e735591a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a073de6e735591a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2d8624a85ef7173",
            "private_dns": "ip-10-230-1-148.ec2.internal",
            "private_ip": "10.230.1.148",
            "public_ip": "34.203.223.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f21289513a192cd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb1dbda54fc9d153",
            "tags": {
              "Name": "VPC-A-NewYork-Prod-Windows",
              "service": "windows"
            },
            "tags_all": {
              "Name": "VPC-A-NewYork-Prod-Windows",
              "service": "windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f7c605052689006"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC-A-NewYork-Prod-With-Bastion-01",
            "aws_subnet.vpc-A-public-us-east-1a",
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC-B-NewYork-Dev-basiclinux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:866340886126:instance/i-0284126175f97d24d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0284126175f97d24d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b44b602e84646473",
            "private_dns": "ip-10-230-1-200.ec2.internal",
            "private_ip": "10.230.1.200",
            "public_ip": "54.235.32.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ea4b1d5130402a2c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb1dbda54fc9d153",
            "tags": {
              "Name": "VPC-B-NewYork-Dev-basiclinux",
              "service": "basiclinux"
            },
            "tags_all": {
              "Name": "VPC-B-NewYork-Dev-basiclinux",
              "service": "basiclinux"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f7c605052689006"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC-A-NewYork-Prod-With-Bastion-01",
            "aws_subnet.vpc-A-public-us-east-1a",
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Homework-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:internet-gateway/igw-070e960f97a5b4835",
            "id": "igw-070e960f97a5b4835",
            "owner_id": "866340886126",
            "tags": {
              "Name": "Homework-IGW",
              "Service": "IGW"
            },
            "tags_all": {
              "Name": "Homework-IGW",
              "Service": "IGW"
            },
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "dependencies": [
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NewYork-Nat-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08833dbe54fc890ec",
            "connectivity_type": "public",
            "id": "nat-01d0b2ebf62ea197a",
            "network_interface_id": "eni-00f171187489a8fb4",
            "private_ip": "10.230.1.212",
            "public_ip": "44.209.254.240",
            "subnet_id": "subnet-0cb1dbda54fc9d153",
            "tags": {
              "Name": "NewYork-Nat-GW"
            },
            "tags_all": {
              "Name": "NewYork-Nat-GW"
            }
          },
          "dependencies": [
            "aws_eip.NewYork-ElasticIP",
            "aws_subnet.vpc-A-public-us-east-1a",
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-A-NewYork-Prod-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:route-table/rtb-0031be519fe162576",
            "id": "rtb-0031be519fe162576",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-A-NewYork-Prod-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-A-NewYork-Prod-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-A-NewYork-Prod-PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:route-table/rtb-0e21b052f9cd93c57",
            "id": "rtb-0e21b052f9cd93c57",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-085a2b62a6e032cc2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A-NewYork-Prod-PublicRT"
            },
            "tags_all": {
              "Name": "VPC-A-NewYork-Prod-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-B-NewYork-Dev-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:route-table/rtb-0348cafb03b4d9ed0",
            "id": "rtb-0348cafb03b4d9ed0",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-085a2b62a6e032cc2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-B-NewYork-Dev-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-B-NewYork-Dev-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03451c805d7c746b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_vpc.VPC-B-NewYork-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC-C-NewYork-Test-PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:route-table/rtb-0633eca0a7e985469",
            "id": "rtb-0633eca0a7e985469",
            "owner_id": "866340886126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-085a2b62a6e032cc2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-C-NewYork-Test-PrivateRT"
            },
            "tags_all": {
              "Name": "VPC-C-NewYork-Test-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cf22b65773db7d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.NewYork-TGW01",
            "aws_vpc.VPC-C-NewYork-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC-A-NewYork-Prod-With-Bastion-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:security-group/sg-08f7c605052689006",
            "description": "VPC-A-NewYork-Prod-With-Bastion-01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f7c605052689006",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "VPC-A-NewYork-Prod-With-Bastion-01",
            "name_prefix": "",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-A-NewYork-Prod-With-Bastion-01",
              "service": "basicwindows"
            },
            "tags_all": {
              "Name": "VPC-A-NewYork-Prod-With-Bastion-01",
              "service": "basicwindows"
            },
            "timeouts": null,
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC-B-NewYork-Dev-SG02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:security-group/sg-00123a6f35c53ad2f",
            "description": "VPC-B-NewYork-Dev-SG02",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00123a6f35c53ad2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC-B-NewYork-Dev-SG02",
            "name_prefix": "",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-B-NewYork-Dev",
              "service": "basiclinux"
            },
            "tags_all": {
              "Name": "VPC-B-NewYork-Dev",
              "service": "basiclinux"
            },
            "timeouts": null,
            "vpc_id": "vpc-03451c805d7c746b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-B-NewYork-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-A-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-039da420563218966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039da420563218966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "New York",
              "Name": "vpc-A-private-us-east-1a",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "vpc-A-private-us-east-1a",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "dependencies": [
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-A-public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-0cb1dbda54fc9d153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb1dbda54fc9d153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "New York",
              "Name": "vpc-A-public-us-east-1a",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "vpc-A-public-us-east-1a",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "vpc_id": "vpc-044e41a5c11bfd984"
          },
          "dependencies": [
            "aws_vpc.VPC-A-NewYork-Prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-B-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-05304e11cd926a660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.231.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05304e11cd926a660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "New York",
              "Name": "vpc-B-private-us-east-1b",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "vpc-B-private-us-east-1b",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "vpc_id": "vpc-03451c805d7c746b9"
          },
          "dependencies": [
            "aws_vpc.VPC-B-NewYork-Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-C-private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-05bc9644c563621ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.232.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bc9644c563621ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "New York",
              "Name": "vpc-C-private-us-east-1c",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "vpc-C-private-us-east-1c",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "vpc_id": "vpc-00cf22b65773db7d5"
          },
          "dependencies": [
            "aws_vpc.VPC-C-NewYork-Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-A-NewYork-Prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:vpc/vpc-044e41a5c11bfd984",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-0dffcce9fd9333c3c",
            "default_route_table_id": "rtb-00c7b1e984773d1ff",
            "default_security_group_id": "sg-0853fceb2e8651642",
            "dhcp_options_id": "dopt-06f049d704ea865d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-044e41a5c11bfd984",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c7b1e984773d1ff",
            "owner_id": "866340886126",
            "tags": {
              "Location": "New York",
              "Name": "VPC-A-NewYork-Prod",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "VPC-A-NewYork-Prod",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-B-NewYork-Dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:vpc/vpc-03451c805d7c746b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.231.0.0/16",
            "default_network_acl_id": "acl-0766d79f023294b72",
            "default_route_table_id": "rtb-040b865a93ad70dee",
            "default_security_group_id": "sg-0abc764f4fac3cf3d",
            "dhcp_options_id": "dopt-06f049d704ea865d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03451c805d7c746b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-040b865a93ad70dee",
            "owner_id": "866340886126",
            "tags": {
              "Location": "New York",
              "Name": "VPC-B-NewYork-Dev",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "VPC-B-NewYork-Dev",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-C-NewYork-Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:vpc/vpc-00cf22b65773db7d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.232.0.0/16",
            "default_network_acl_id": "acl-0643cc72704263b76",
            "default_route_table_id": "rtb-0be8db58e96efaf3d",
            "default_security_group_id": "sg-0d4e368b899952981",
            "dhcp_options_id": "dopt-06f049d704ea865d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00cf22b65773db7d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be8db58e96efaf3d",
            "owner_id": "866340886126",
            "tags": {
              "Location": "New York",
              "Name": "VPC-C-NewYork-Test",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Location": "New York",
              "Name": "VPC-C-NewYork-Test",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          }
        }
      ]
    }
  ]
}